# T-Trace

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
docs/: ECOSYSTEM_REVIEWER_BRIDGE.md  GRANT_EVIDENCE.md
examples/: forbidden.ttrace.jsonl  minimal.ttrace.jsonl
schemas/: t-trace-record.schema.json
scripts/: validate_ttrace.py
spec/: t-trace.md
tests/: test_validator.py
tests/fixtures/: invalid_commit_without_transition.ttrace.jsonl  invalid_duplicate_id.ttrace.jsonl  invalid_non_monotonic_ts.ttrace.jsonl  valid.ttrace.jsonl
