[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t-trace"
version = "0.1.0"
description = "Reference validator and artifacts for the T-Trace protocol"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "T-Trace Contributors" }
]
keywords = ["trace", "jsonl", "protocol", "audit", "continuity"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = []